[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "asg-scaling-manager"
version = "0.1.0"
description = "CLI library to manage AWS ASG desired/min/max capacity by tag filters"
authors = [{name = "Your Name"}]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
  "boto3>=1.34",
  "typer>=0.12",
  "pydantic>=2.7",
  "structlog>=24.1"
]

[project.scripts]
asg-sm = "asg_scaling_manager.cli:app"

[tool.pytest.ini_options]
addopts = "-q"


